clean up code.